@@ -4,95 +4,103 @@ import com.rabbitmq.client.BasicProperties;
 import com.rabbitmq.client.Channel;
 import com.rabbitmq.client.Envelope;
 import de.karthaus.heatingControl3.model.HeatingControlContext;
+import io.micronaut.context.annotation.Property;
 import io.micronaut.context.annotation.Value;
 import io.micronaut.rabbitmq.annotation.Queue;
 import io.micronaut.rabbitmq.annotation.RabbitListener;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import jakarta.annotation.PostConstruct;
+import jakarta.inject.Singleton;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 @RabbitListener
+@Slf4j
+@RequiredArgsConstructor
+@Singleton
 public class SensorDataConsumer {
-
-    private final Logger logger = LoggerFactory.getLogger(this.getClass());
 
     List<String> messageLengths = Collections.synchronizedList(new ArrayList<>());
 
-    private HeatingControlContext heatingControlContext;
 
-    @Value("${hc3.sensor.returnLineSolar}")
-    protected String returnLineSolarSensorId;
+    private final HeatingControlContext heatingControlContext;
 
-    @Value("${hc3.sensor.inletLineProcessWater}")
-    protected String inletLineProcessWaterSensorId;
+    @Value("${hc3.sensor.inlet-grey-water-sensor-id}")
+    protected String inletGreyWaterSensorID;
 
-    @Value("${hc3.sensor.processWater}")
-    protected String processWaterSensorId;
+    @Value("${hc3.sensor.greyWaterSensorID}")
+    protected String greyWaterSensorID;
 
-    @Value("${hc3.sensor.inletLineHeating}")
-    protected String inletLineHeatingSensorId;
+    @Property(name = "hc3.sensor.outletSolarSensorID")
+    protected String outletSolarSensorID;
 
-    @Value("${hc3.sensor.outdoor}")
-    protected String outdoorSensorId;
+    @Property(name = "hc3.sensor.inletHeatingSensorID")
+    protected String inletHeatingSensorID;
 
-    /**
-     * @param heatingControlContext
-     */
-    public SensorDataConsumer(de.karthaus.heatingControl3.model.HeatingControlContext heatingControlContext) {
-        this.heatingControlContext = heatingControlContext;
+    @Property(name = "hc3.sensor.outdoorSensorID")
+    protected String outdoorSensorID;
+
+    @Property(name = "hc3.temperatureQueue.name")
+    protected String temperatureQueue;
+
+    @Property(name = "rabbitmq.uri")
+    protected String rabbitMqHost;
+
+
+    @PostConstruct
+    public void init() {
+        log.info("initializing amqp listener on Queue:{}", temperatureQueue);
+        log.debug("inletGreyWaterSensorID:{}", inletGreyWaterSensorID);
+        log.debug("greyWaterSensorID:{}", greyWaterSensorID);
+        log.debug("outletSolarSensorID:{}", outletSolarSensorID);
+        log.debug("inletHeatingSensorID:{}", inletHeatingSensorID);
+        log.debug("outdoorSensorID:{}", outdoorSensorID);
+        log.info("Listening on RabbitMQ - Host:{}",rabbitMqHost);
     }
 
-    /**
-     * @param data
-     * @param envelope
-     * @param basicProperties
-     * @param channel
-     */
-    @Queue("${hc3.temperature-queue.name}")
+
+    @Queue("hc-temperature")
     public void receive(byte[] data, Envelope envelope, BasicProperties basicProperties, Channel channel) {
-        logger.debug("Receive Data from Rabbit MQ at Queue:hc-ds18b20");
+        log.debug("Receive Data from Rabbit MQ in Queue:{}", temperatureQueue);
         boolean map = false;
-        if (envelope.getRoutingKey().equalsIgnoreCase(combustionSensorId)) {
-            heatingControlContext.setTemp_combustionChamber(new Double(new String(data)));
+
+        if (envelope.getRoutingKey().equalsIgnoreCase(inletGreyWaterSensorID)) {
+            heatingControlContext.setInletGreyWaterTemp(Double.valueOf(new String(data)));
             map = true;
-            logger.debug("Receive combustionChamber temp {}", heatingControlContext.getTemp_combustionChamber());
-        }
-        if (envelope.getRoutingKey().equalsIgnoreCase(leadingLineSensorId)) {
-            heatingControlContext.setFlowTemperature(new Double(new String(data)));
-            map = true;
-            logger.debug("Receive flow temp {}", heatingControlContext.getFlowTemperature());
+            log.debug("Receive inletGreyWaterTemp:{}", heatingControlContext.getInletGreyWaterTemp());
         }
 
-        if (envelope.getRoutingKey().equalsIgnoreCase(returnLineSensorId)) {
-            heatingControlContext.setReturnTemperature(new Double(new String(data)));
+        if (envelope.getRoutingKey().equalsIgnoreCase(greyWaterSensorID)) {
+            heatingControlContext.setGreyWaterTemp(Double.valueOf(new String(data)));
             map = true;
-            logger.debug("Receive return temp {}", heatingControlContext.getReturnTemperature());
+            log.debug("Receive greyWaterTemp:{}", heatingControlContext.getGreyWaterTemp());
         }
 
-        if (envelope.getRoutingKey().equalsIgnoreCase(bufferSensorId)) {
-            heatingControlContext.setBufferTemperature(new Double(new String(data)));
+        if (envelope.getRoutingKey().equalsIgnoreCase(outletSolarSensorID)) {
+            heatingControlContext.setOutletSolarTemp(Double.valueOf(new String(data)));
             map = true;
-            logger.debug("Receive Buffer temp {}", heatingControlContext.getBufferTemperature());
+            log.debug("Receive outletSolarTemp:{}", heatingControlContext.getOutletSolarTemp());
         }
 
-        if (envelope.getRoutingKey().equalsIgnoreCase(garageSensorId)) {
-            heatingControlContext.setGarageTemperature(new Double(new String(data)));
+        if (envelope.getRoutingKey().equalsIgnoreCase(inletHeatingSensorID)) {
+            heatingControlContext.setInletHeatingTemp(Double.valueOf(new String(data)));
             map = true;
-            logger.debug("Receive Garage temp {}", heatingControlContext.getGarageTemperature());
+            log.debug("Receive inletHeatingTemp {}", heatingControlContext.getInletHeatingTemp());
         }
-        if (envelope.getRoutingKey().equalsIgnoreCase(outdoorSensorId)) {
-            heatingControlContext.setOutdoorTemperature(new Double(new String(data)));
+
+        if (envelope.getRoutingKey().equalsIgnoreCase(outdoorSensorID)) {
+            heatingControlContext.setOutdoorTemp(Double.valueOf(new String(data)));
             map = true;
-            logger.debug("Receive outdoor temp {}", heatingControlContext.getOutdoorTemperature());
+            log.debug("Receive outDoorTemp:{}", heatingControlContext.getOutdoorTemp());
         }
 
         // Data can not be mapped
 
         if (!map) {
-            logger.warn("Sensor {} not Mapped to configured sensors...", envelope.getRoutingKey());
+            log.warn("Sensor {} not Mapped to configured sensors...", envelope.getRoutingKey());
         }
     }
 
